# OCI-CostWatch

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init.py
backend/alerts/: email_alert.py  slack_alert.py
backend/api/: main.py
backend/config/: settings.py
backend/models/: database_models.py
backend/repositories/: __init__.py  scan_repository.py
backend/scanners/: cost_analyzer.py  exposure_scanner.py  idle_detector.py  network_waste_scanner.py  storage_waste_scanner.py  tag_compliance_scanner.py  zombie_detector.py
backend/services/: database.py  recommendations.py  scan_service.py
backend/tasks/: celery_app.py
backend/utils/: logging.py
cli/: costwatch_cli.py
config/: oci_config.example
dashboards/: grafana_dashboard.json
docker/: Dockerfile  docker-compose.yml
prometheus/: prometheus.yml
scripts/: setup.sh
terraform/: monitoring_instance.tf  provider.tf  variables.tf
tests/: test_scanners.py
